# openclKind

./: CMakeLists.txt  README.md  helloOpencl.cpp
kernel/: vector_add.cl
src/: CMakeLists.txt  hello.cpp  hello.hpp
